--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
 #Adding config.py file.
 config.py
 
+#Adding module work
+VacationPy.ipynb
+WeatherPy.ipynb
+Weather Data/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
